# ema-poc

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml
config/: llm_targets.yaml  settings.yaml
config_demo/: settings.yaml
config_deploy/: llm_targets.yaml  reference_corpus.yaml  settings.yaml
ema_poc/: __init__.py  audit.py  cli.py  config.py  connectivity.py  coverage.py  db.py  export.py  logging_setup.py  models.py  notify.py  prompts.py  reporting.py  run_gaps.py
ema_poc/adapters/: __init__.py  base.py  claude_adapter.py  gemini_adapter.py  openai_adapter.py  registry.py
ema_poc/agent/: __init__.py  executor.py  rate_limiter.py  runner.py
ema_poc/consensus/: compute.py
ema_poc/dashboard/: __init__.py  build.py  data.py  dataset.py  render.py
ema_poc/drift/: baseline.py  detector.py  embeddings.py
ema_poc/hallucination/: corpus.py  detector.py  pipeline.py
ema_poc/playground/: jobs.py  rescore.py  service.py
ema_poc/repositories/: __init__.py  alerts.py  baselines.py  citations.py  consensus.py  embeddings.py  hallucinations.py  questions.py  responses.py  runs.py  sandbox.py  scores.py
ema_poc/scoring/: __init__.py  alerts.py  pipeline.py  scorer.py
ema_poc/suggest/: gaps.py  generator.py  pipeline.py
ema_poc/web/: app.py
tests/: test_audit.py  test_cli.py  test_cli_dashboard.py  test_cli_integration.py  test_config_credentials.py  test_config_load.py  test_connectivity.py  test_coverage.py  test_db.py  test_export.py  test_foundations_integration.py  test_logging_setup.py  test_models.py  test_notify.py  test_prompts.py  test_reporting.py  test_run_gaps.py  test_schema_jobs.py  test_smoke.py
tests/adapters/: test_adapters_integration.py  test_base.py  test_claude_adapter.py  test_gemini_adapter.py  test_openai_adapter.py  test_registry.py
tests/agent/: test_executor.py  test_rate_limiter.py  test_run_engine_integration.py  test_runner.py  test_runner_filters.py
tests/consensus/: test_compute.py
tests/dashboard/: test_dashboard_build.py  test_dashboard_data.py  test_dashboard_integration.py  test_dashboard_render.py  test_dataset.py  test_dataset_realtime.py
tests/drift/: test_baseline.py  test_detector.py  test_embeddings.py
tests/hallucination/: test_corpus.py  test_detector.py  test_pipeline.py
tests/playground/: test_jobs.py  test_rescore.py  (+4 more)
(+79 files in other folders)
