[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ema-poc"
version = "0.1.0"
description = "Evidence Monitoring Agent POC"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pyyaml",
    "openpyxl",
    "anthropic",
    "openai",
    "google-generativeai",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "httpx>=0.27"]

[project.scripts]
ema = "ema_poc.cli:main"

[tool.setuptools.packages.find]
include = ["ema_poc*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["ema_poc"]
